[Java] Replaced deprecated constructor calls of wrapper classes
* Replaced 'new <PrimitiveWrapper>(<primitiveValue>)' calls with
  '<PrimitiveWrapper>.valueOf(<primitiveValue>)' for
  Boolean, Char, Short, Integer, Long since the original APIs
  are deprecated from Java 9 onwards