@@ -144,7 +144,8 @@ public class IltConsumerSyncMethodTest extends IltConsumerTest {
         callProxyMethodWithParameterAndAssertResult("methodWithSinglePrimitiveParameters",
                                                     shortArg,
                                                     (Short arg,
-                                                     String res) -> res.equals(new Integer(Short.toUnsignedInt(arg)).toString()));
+                                                     String res) -> res.equals(Integer.valueOf(Short.toUnsignedInt(arg))
+                                                                                      .toString()));
         logger.info(name.getMethodName() + " - OK");
     }
 
